# redshift-query-pilot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  TODO  command.md  mcp_catalog.py  mcp_query.py  mcp_server.py  pyproject.toml  redshift_conn.py  sync_catalog.py  sync_knowledge.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml
knowledge/: README.md
tests/: conftest.py  test_mcp_catalog.py  test_mcp_query.py  test_redshift_conn.py  test_sync_catalog.py  test_sync_knowledge.py
