[project]
name = "schema-sync"
version = "0.1.0"
description = "Sync AWS Glue and Redshift table schemas into a local SQLite catalog"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.28.0",
    "redshift-connector>=2.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.15.16"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N"]

[tool.ruff.format]
quote-style = "double"

[project.scripts]
schema-sync = "sync_catalog:main"
mcp_catalog = "mcp_catalog:main"
mcp_query = "mcp_query:main"
knowledge-sync = "sync_knowledge:main"
